--- a/app/src/main/res/layout/activity_tutor_request_view_app.xml
+++ b/app/src/main/res/layout/activity_tutor_request_view_app.xml
@@ -56,7 +56,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/view_recommend_btn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
