--- a/app/src/main/res/layout/activity_job_history_primary.xml
+++ b/app/src/main/res/layout/activity_job_history_primary.xml
@@ -49,7 +49,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/secondarybtn"
+            android:id="@+id/secondarybtnhistory"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
