--- a/app/src/main/res/layout/activity_job_list_primary.xml
+++ b/app/src/main/res/layout/activity_job_list_primary.xml
@@ -50,7 +50,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/secondarybtn"
+            android:id="@+id/secondarybtnlist"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
