--- a/app/src/main/res/layout/activity_tutor_request_open.xml
+++ b/app/src/main/res/layout/activity_tutor_request_open.xml
@@ -56,7 +56,7 @@
             android:text="View\nApplication" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/viewAppRecommendation"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
