--- a/app/src/main/res/layout/activity_child_info.xml
+++ b/app/src/main/res/layout/activity_child_info.xml
@@ -29,7 +29,6 @@
             android:textSize="24sp" />
     </LinearLayout>
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -66,52 +65,62 @@
             android:textColor="@android:color/black"
             android:textSize="20sp" />
 
-
-        <RadioGroup
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <RadioButton
-                    android:id="@+id/primaryrb"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Primary School" />
+                <RadioGroup
+                    android:id="@+id/rgEducation"
+                    android:layout_width="186dp"
+                    android:layout_height="wrap_content">
 
-                <Spinner
-                    android:id="@+id/spinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-            </LinearLayout>
+                    <RadioButton
+                        android:id="@+id/primaryrb"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Primary School" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="horizontal">
+                    <RadioButton
+                        android:id="@+id/secrb"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Secondary School" />
 
-                <RadioButton
-                    android:id="@+id/secrb"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Secondary School" />
+                </RadioGroup>
 
-                <Spinner
-                    android:id="@+id/spinner2"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+
+                    <Spinner
+                        android:id="@+id/spinner_primary"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
+
+                    <Spinner
+                        android:id="@+id/spinner_secondary"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
+
+                </LinearLayout>
             </LinearLayout>
 
-        </RadioGroup>
+        </LinearLayout>
+
 
     </LinearLayout>
 
