--- a/app/src/main/res/layout/activity_list_of_child.xml
+++ b/app/src/main/res/layout/activity_list_of_child.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".ListOfChild">
 
+    <include layout = "@layout/layout_button_list_child"/>
+
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
@@ -30,7 +32,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/LinearLayoutOutside"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -48,12 +50,13 @@
             tools:layout_editor_absoluteX="8dp">
 
             <LinearLayout
+                android:id="@+id/linearlayoutListChild"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/btncardlistchild"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
@@ -84,7 +87,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        app:layout_constraintTop_toBottomOf="@+id/LinearLayoutOutside">
 
         <Button
             android:id="@+id/addNewChildbtn"
