--- a/app/src/main/res/layout/activity_tutor_accept_jobs_primary.xml
+++ b/app/src/main/res/layout/activity_tutor_accept_jobs_primary.xml
@@ -29,44 +29,14 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="20dp"
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-
-        <Button
-            android:id="@+id/primarybtn"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Primary School"
-            android:background="#32CD32"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/secondarybtnaccept"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Secondary School" />
-
-    </LinearLayout>
-
-    <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -75,11 +45,11 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <android.support.v7.widget.CardView
-                    android:id="@+id/parentRequestCard"
+                    android:id="@+id/parentViewApplications"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp">
@@ -89,166 +59,102 @@
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/parentReqDesctxt"
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="10dp"
-                            android:text="TextView"
-                            android:textAlignment="center" />
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="5dp"
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/textView14"
-                                android:layout_width="match_parent"
+                                android:id="@+id/parentNametxt"
+                                android:layout_width="266dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Education Level:"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/background_dark" />
+                                android:text="Ahmad Syahir "
+                                android:textSize="18sp"
+                                android:textStyle="bold" />
 
-                            <TextView
-                                android:id="@+id/eduLvltxt"
-                                android:layout_width="match_parent"
+                            <RatingBar
+                                style="?android:attr/ratingBarStyleSmall"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:background="#C0C0C0"
-                                android:text="TextView"
-                                android:textAlignment="center" />
+                                android:isIndicator="true"
+                                android:numStars="5"
+                                android:stepSize="0.1" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="5dp"
+                            android:layout_height="wrap_content"
                             android:orientation="horizontal">
 
-                            <TextView
-                                android:id="@+id/textView15"
-                                android:layout_width="match_parent"
+                            <LinearLayout
+                                android:layout_width="224dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="Grade:"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/background_dark" />
+                                android:layout_margin="3dp"
+                                android:orientation="vertical">
 
-                            <TextView
-                                android:id="@+id/gradetxt"
+                                <TextView
+                                    android:id="@+id/childNametxt"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Child's Name: Syahirah"
+                                    android:textColor="@android:color/background_dark" />
+
+                                <TextView
+                                    android:id="@+id/childEdulvltxt"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Standard: 5"
+                                    android:textColor="@android:color/background_dark" />
+
+                                <TextView
+                                    android:id="@+id/subjecttxt"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Mathematics"
+                                    android:textColor="@android:color/background_dark" />
+
+                                <TextView
+                                    android:id="@+id/datetxt"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="12/09/19, 8.00 pm"
+                                    android:textColor="@android:color/background_dark" />
+
+                                <TextView
+                                    android:id="@+id/loctxt"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Location: {Parent's Address}"
+                                    android:textColor="@android:color/background_dark" />
+
+                            </LinearLayout>
+
+                            <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:background="#C0C0C0"
-                                android:text="TextView"
-                                android:textAlignment="center" />
-                        </LinearLayout>
+                                android:layout_height="match_parent"
+                                android:orientation="vertical">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="5dp"
-                            android:orientation="horizontal">
+                                <Button
+                                    android:id="@+id/contactParentbtn"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_margin="5dp"
+                                    android:layout_weight="1"
+                                    android:background="#5A5AD0"
+                                    android:text="Contact Parent"
+                                    android:textColor="@android:color/background_light" />
 
-                            <TextView
-                                android:id="@+id/textView16"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="Subject:"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/background_dark" />
-
-                            <TextView
-                                android:id="@+id/subjecttxt"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:background="#C0C0C0"
-                                android:text="TextView"
-                                android:textAlignment="center" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="5dp"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/textView17"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="Location:"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/background_dark" />
-
-                            <TextView
-                                android:id="@+id/loctxt"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:background="#C0C0C0"
-                                android:text="TextView"
-                                android:textAlignment="center" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="5dp"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/textView20"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="Status:"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/background_dark" />
-
-                            <TextView
-                                android:id="@+id/statustxt"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:background="#C0C0C0"
-                                android:text="TextView"
-                                android:textAlignment="center" />
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="10dp"
-                            android:orientation="horizontal">
-
-                            <Button
-                                android:id="@+id/messagebtn"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="15dp"
-                                android:layout_marginLeft="20dp"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginRight="20dp"
-                                android:layout_weight="1"
-                                android:background="#5A5AD0"
-                                android:text="Message"
-                                android:textColor="@android:color/background_light" />
-
-                            <Button
-                                android:id="@+id/applybtn"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="15dp"
-                                android:layout_weight="1"
-                                android:background="#5A5AD0"
-                                android:text="Apply"
-                                android:textColor="@android:color/background_light" />
+                                <Button
+                                    android:id="@+id/acceptbtn"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_margin="5dp"
+                                    android:layout_weight="1"
+                                    android:background="#5A5AD0"
+                                    android:text="Accept"
+                                    android:textColor="@android:color/background_light" />
+                            </LinearLayout>
                         </LinearLayout>
 
                     </LinearLayout>
@@ -256,6 +162,7 @@
                 </android.support.v7.widget.CardView>
             </LinearLayout>
         </ScrollView>
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
