--- a/app/src/main/res/layout/activity_tutor_dashboard_cal.xml
+++ b/app/src/main/res/layout/activity_tutor_dashboard_cal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ParentDashboardCal">
+    tools:context=".tutorDashboardCal">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -71,7 +71,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="0dp"
                 android:layout_marginTop="0dp"
                 android:layout_marginRight="0dp"
@@ -82,7 +82,7 @@
                     android:id="@+id/dashboardCard"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="15dp">
+                    android:layout_margin="20dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -99,10 +99,10 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/dashCardTutorTxt"
+                            android:id="@+id/dashCardLvltxt"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Tutor: Pn. Aliza"
+                            android:text="Standard: 5"
                             android:textColor="@android:color/black"
                             android:textSize="16sp" />
 
@@ -121,6 +121,14 @@
                             android:text="When: 12/09/19, 8.00pm"
                             android:textColor="@android:color/black"
                             android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/dashCardLocTxt"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Location: Jalan Ampang"
+                            android:textColor="@android:color/black"
+                            android:textSize="16sp" />
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
@@ -128,6 +136,5 @@
         </ScrollView>
 
     </LinearLayout>
-
 
 </android.support.constraint.ConstraintLayout>
