--- a/app/src/main/res/layout/layout_button_list_child.xml
+++ b/app/src/main/res/layout/layout_button_list_child.xml
@@ -3,17 +3,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/testbutton"
+    <android.support.v7.widget.CardView
+        android:id="@+id/parentRequestCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Name : Syahir\nStandard : 5"
-        android:textAlignment="viewStart"
-        android:textAllCaps="false"
-        android:textSize="18sp" />
+        android:layout_margin="5dp"
+        style="@style/MyCardViewStyle">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/listchildNamelbl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Syahir"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/listchildLevellbl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Subject: Mathematics"
+                android:textAlignment="textStart"
+                android:textColor="@android:color/background_dark" />
+
+            <TextView
+                android:id="@+id/listchildEdulbl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Subject: Mathematics"
+                android:textAlignment="textStart"
+                android:textColor="@android:color/background_dark" />
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 
 </LinearLayout>
